--- a/fly.toml
+++ b/fly.toml
@@ -1,39 +1,30 @@
-# fly.toml file generated for image-resize-rust on 2022-02-08T07:05:03+05:30
+app = 'image-resize-rust-iavian'
+primary_region = 'ewr'
 
-app = "image-resize-rust"
+[build]
 
-kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
-
-[env]
-
-[experimental]
-  allowed_public_ports = []
-  auto_rollback = true
-
-[[services]]
-  http_checks = []
+[http_service]
   internal_port = 8080
-  processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
+  [http_service.concurrency]
+    type = 'requests'
+    hard_limit = 250
+    soft_limit = 200
 
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
+  [[http_service.checks]]
+    interval = '30s'
+    timeout = '5s'
+    grace_period = '10s'
+    method = 'GET'
+    path = '/'
 
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    grace_period = "1s"
-    interval = "15s"
-    restart_limit = 0
-    timeout = "2s"
+[[vm]]
+  size = 'shared-cpu-2x'
+  memory = '2gb'
+  cpu_kind = 'shared'
+  cpus = 2
+  processes = ['app']
